<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/viewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="@dimen/middleText"
        android:text="@string/titleES" />

    <Button
        android:id="@+id/buttonCreateES"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewTitle"
        android:layout_centerHorizontal="true"
        android:text="@string/createES"/>

    <Button
        android:id="@+id/buttonReadES"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonCreateES"
        android:layout_centerHorizontal="true"
        android:text="@string/readES"/>

</RelativeLayout>